RESOLVE: horizontal scrollbar fixed

--- a/src/Components/Semester/Semester.module.scss
+++ b/src/Components/Semester/Semester.module.scss
@@ -1,6 +1,7 @@
 .container {
   height: 100vh;
-  width: 98vw;
+  width: 100vw;
+  max-width: 100%;
 
   .arrow {
     cursor: pointer;
@@ -160,7 +161,7 @@
 
 @media only screen and (max-width: 1200px) {
   .container {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
